--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* Body */
+Body
 body{
   background-color: rgb(189, 189, 189);
 }
@@ -36,60 +36,82 @@ body{
 
 .login-form-2 .btnSubmit{
     background-color: #fff;
-    color: #0062cc;
+    color: #085ab1;
 }
 
 
 /* CRM Resultado Page */
+.containerPrincipal h3{
+  padding-top: 15px;
+  padding-left: 20px;
+  color: #085ab1;
+  font-size: 20px;
+}
+
 .result-containt{
-  width: 400px;
+  width: 280px;
   border-radius: 5px;
-  padding: 5%;
+  background-color: rgb(230, 230, 230);
+  margin-left: 20px;
 }
 
 .datos-result{
-  color: #fff;
-  border-radius: 5px;
+  height: 50px;
+  color: rgb(0, 0, 0);
+  border-radius: 20px;
   position: relative;
   padding: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 1px;
+}
+
+.separadorBlanco{
+  position: absolute;
+  bottom: 0;
+  background-color: white;
+  width: 250px;
+  height: 2px;
 }
 
 .details{
   position: absolute;
-  left: 0;
-  top: 0;
+  left: 15px;
+  top: 10px;
 }
 
 .details-telf small{
+  color: #085ab1;
   position: absolute;
-  top: 20px;
-  left: 0;
+  top: 25px;
+  left: 15px;
   margin: 0;
   font-size: 14px;
 }
 
 .datos-result h5{
+  font-weight: bold;
+  font-size: 15px;
   margin: 0px;
 }
 
 .btnEdit{
   position: absolute;
-  top: 0px;
+  top: 15px;
   right: 55px;
 }
 .btnEdit button{
   border: none;
   background: transparent;
+  color: #085ab1;
 }
 .btnDelete{
   position: absolute;
-  top: 0px;
+  top: 15px;
   right: 10px;
 }
 .btnDelete button{
   border: none;
   background: transparent;
+  color: #085ab1;
 }
 
 /* Modal */
@@ -182,201 +204,81 @@ body{
   background-color: #5a89bb;
 }
 
-/* ------------------------------------------------------Sidebar y Main */
-:root{
-  --color-1st: #ffea92;
-  --color-2nd: #5bc995;
-  --menu-width-desktop: 240px;
-  --menu-width-tablet: 90px;
-  --menu-width-smartphone: 230px;
-}
 
-body{
-  background-color: var(--color-1st);
-  margin: 0;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  color: #fff;
-  padding-left: var(--menu-width-desktop);
-}
-main{
+/* Nuevo Diseño */
+
+.principalSearch{
   position: relative;
-  height: 100vh;
+  width: 400px;
 }
 
-main .helper{
-  background-color: rgba(0, 0, 0, 0.2);
-  color: var(--color-1st);
+.principalSearch i{
+  color: #085ab1;
+}
+
+.principalSearch input{
+  border: none;
+  background-color: rgb(230, 230, 230);
+  border-radius: 50px;
+  padding: 5px;
+  color: black;
+  margin: 10px;
+  width: 300px;
+}
+
+.principalSearch input::placeholder{
+  padding-left: 14px;
+}
+.principalSearch i{
   position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate3d(-50%,-50%,0);
-  padding: 16px 20px;
-  text-align: center;
-  border-radius: 20px;
-  font-size: 2em;
-  font-weight: bold;
+  top: 18px;
+  right: 120px;
 }
 
-.menu{
-  background-color: var(--color-2nd);
-  height: 100vh;
-  width: var(--menu-width-desktop);
+.btn{
+  margin-top: 20px;
+  margin-left: 110px;
+  color: white;
+  background-color: #085ab1;
+  border-radius: 50px;
+}
+
+.footer{
+  margin-top: 20px;
+  background-color: #085ab1;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  width: 340px;
+  height: 70px;
+  bottom: 0;
   position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  outline: none;
-}
-.menu .avatar{
-  background: rgba(0, 0, 0, 0.2);
-  padding: 2em 0.5em;
-  text-align: center;
-}
-.menu img{
-  width: 70px;
-  border-radius: 50%;
-  overflow: hidden;
-  border: 4px solid var(--color-1st);
-  box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.2);
-}
-.menu h2{
-  font-weight: normal;
-  margin-bottom: 0;
 }
 
-ul{
-  list-style: none;
-  padding: 0.5em 0;
-  margin: 0;
+
+.footer button{
+  border: none;
+  background-color: transparent;
+  color: white;
 }
-li{
-  padding: 0.5em 1em 0.5em 3em;
-  font-size: 0.95em;
-  font-weight: normal;
-  background-repeat: no-repeat;
-  background-position: left 15px center;
-  background-size: auto 20px;
-  transition: 0.15s linear;
+
+.footerContent button{
+  position: absolute;
+  top: 20px;
+  left: 25%;
   cursor: pointer;
 }
-li button{
-  border: none;
-  background: transparent;
-  color: #fff;
-}
-li:hover{
-  background-color: rgba(0, 0, 0, 0.1);
-}
-li:focus{
-  outline: none;
+
+.footerLink a{
+  position: absolute;
+  top: 20px;
+  left: 45%;
+  cursor: pointer;
 }
 
-@media screen and (max-width: 900px) and (min-width:400px){
-  body{
-    padding-left: var(--menu-width-tablet);
-  }
-  .menu{
-    width: var(--menu-width-tablet);
-  }
-  .menu .avatar{
-    padding: 0.5em;
-    position: relative;
-  }
-  .menu img{
-    width: var(--menu-width-tablet - 30px);
-  }
-  .menu h2{
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: var(--menu-width-tablet + 10px);
-    margin: 0;
-    min-width: 200px;
-    border-radius: 4px;
-    background: rgba(0, 0, 0, 0.4);
-    transform: translate3d(-20px,-50px,0);
-    transition: 0.15s ease-in-out;
-  }
-  .menu h2:hover{
-    opacity: 1;
-    transform: translate3d(0px,-50%,0);
-  }
-
-  /* Menu */
-  ul li{
-    height: var(--menu-width-tablet/1.5);
-    background-position: center center;
-    background-size: 30px auto;
-    position: relative;
-  }
-  li span{
-    opacity: 0;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 0.2em 0.5em;
-    border-radius: 4px;
-    top: 50%;
-    left: var(--menu-width-tablet - 10px);
-    transform:translate3d(-15px,-50%, 0);
-		transition:all 0.15s ease-in-out;
-  }
-  li span::before{
-    content: '';
-    width: 0;
-    height: 0;
-    position: absolute;
-    top: 50%;
-    left: -5px;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-    border-right: 5px solid rgba(0, 0, 0, 0.5);
-    transform: translateY(-50%);
-  }
-  li span:hover{
-    opacity: 1;
-    transform: translate3d(0px, -50%,0);
-  }
-
-}
-
-@media screen and (max-width: 400px) {
-  body{
-    padding-left: 0;
-  }
-  .menu{
-    width: var(--menu-width-smartphone);
-    box-shadow: 0 0 0 100em rgba(0, 0, 0, 0);
-    transform: translate3d(var(--menu-width-smartphone),0,0);
-    transition: all 0.3s ease-in-out;
-  }
-  .smartphone-menu-trigger{
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    left: 100%;
-    background: var(--color-2nd);
-  }
-  .smartphone-menu-trigger::before .smartphone-menu-trigger::after{
-    content: '';
-    width: 50%;
-    height: 2px;
-    background: #fff;
-    border-radius: 10px;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate3d(-50%,-50%,0);
-  }
-  .smartphone-menu-trigger::after{
-    top: 55%;
-    transform: translate3d(-50%,-50%,0);
-  }
-  ul li{
-    padding: 1em 1em 1em 3em;
-    font-size: 1.2em;
-  }
-  .menu:focus{
-    transform: translate3d(0,0,0);
-    box-shadow: 0 0 0 100em rgba(0, 0, 0, 0.6);
-  }
+.footerGithub a{
+  position: absolute;
+  top: 20px;
+  left: 65%;
+  cursor: pointer;
+  color: white;
 }
