--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,7 @@ body{
 /* CRM Resultado Page */
 .containerPrincipal h3{
   padding-top: 15px;
-  padding-left: 20px;
+  padding-left: 10px;
   color: #085ab1;
   font-size: 20px;
 }
@@ -52,7 +52,7 @@ body{
   width: 280px;
   border-radius: 5px;
   background-color: rgb(230, 230, 230);
-  margin-left: 20px;
+  margin-left: 15px;
 }
 
 .datos-result{
@@ -207,6 +207,23 @@ body{
 
 /* Nuevo Diseño */
 
+.marcoPrincipal{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  /* border: 2px solid gray; */
+}
+
+.marcoSecundario{
+  /* border: 1px solid gray; */
+  box-shadow: 0px 2px 17px 7px rgba(0,0,0,0.58);
+  border-radius: 10px;
+  padding: 10px;
+  width: 330px;
+  height: 90vh;
+}
+
 .principalSearch{
   position: relative;
   width: 400px;
@@ -237,10 +254,16 @@ body{
 
 .btn{
   margin-top: 20px;
-  margin-left: 110px;
+  margin-left: 90px;
   color: white;
   background-color: #085ab1;
   border-radius: 50px;
+}
+
+.marcoFooter{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer{
@@ -248,9 +271,9 @@ body{
   background-color: #085ab1;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-  width: 340px;
+  width: 320px;
   height: 70px;
-  bottom: 0;
+  bottom: 90px;
   position: fixed;
 }
 
