--- a/src/styles.css
+++ b/src/styles.css
@@ -229,6 +229,14 @@ body{
   width: 400px;
 }
 
+.principalSearch button{
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  top: 14px;
+  right: 120px;
+}
+
 .principalSearch i{
   color: #085ab1;
 }
@@ -246,11 +254,11 @@ body{
 .principalSearch input::placeholder{
   padding-left: 14px;
 }
-.principalSearch i{
+/* .principalSearch i{
   position: absolute;
   top: 18px;
   right: 120px;
-}
+} */
 
 .btn{
   margin-top: 20px;
@@ -303,5 +311,10 @@ body{
   top: 20px;
   left: 65%;
   cursor: pointer;
+  color: white;
+}
+
+.footer a{
+  text-decoration: none;
   color: white;
 }
