--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,69 +1,42 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>Mi Primera App</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  </head>
-  <body>
-      
-    <!-- <span> {{title}} Esta Online </span>
-    <h2> {{saludo}} </h2> -->
+<!-- <div *ngIf="modalSwitch == true">
+  <app-modal></app-modal>
+</div> -->
 
     <div class="marcoPrincipal">
+
+
+
       <div class="marcoSecundario">
 
           <div class="principalSearch">
-            <input type="search" placeholder="Buscar">
-            <button>
+            <input type="search" placeholder="Buscar" name='search' [(ngModel)]="search" autofocus>
+            <button (click)="seeData(search)">
               <i class="fa-solid fa-magnifying-glass"></i>
             </button>
           </div>
 
-          <div>
-            <ul>
-              <li *ngFor="let data of event" >Name: {{data.name}}</li>
-            </ul>
-          </div>
+          <div *ngFor="let data of event" class="datos-result">
 
-          <div>
+            <div class="details">
+              <h5>{{data.name}} {{data.lastName}} </h5>
+            </div>
 
-            <form (ngSubmit)="save(datos)" #datos='ngForm'>
-              <div>
-                <label for="">Nombre: </label>
-                <input type="text" name='name' #name='ngModel' [ngModel]="data.name">
-              </div>
-              <div>
-                <label for="">Apellido: </label>
-                <input type="text" name="lastName" #lastName="ngModel" [ngModel]="data.lastName">
-              </div>
-              <div>
-                <label for="">Telefono: </label>
-                <input type="number" name="telefono" #telefono="ngModel" [ngModel]="data.telefono">
-              </div>
-              <div>
-                <label for="">Email: </label>
-                <input type="email" name="email" #email="ngModel" [ngModel]="data.email">
-              </div>
-              <div>
-                <label for="">Direccion: </label>
-                <input type="text">
-              </div>
-              
-              <button class="btn" type="submit"> Agregar
-                <span></span>
-                <i class="fa-solid fa-user-plus"></i>
+            <div class="details-telf">
+                <small>(+57) {{data.telefono}}</small>
+            </div>
+
+            <div class="btnDelete">
+              <button class="btn btn-danger" (click)="deleteGame(data._id)">
+                <i class="far fa-trash-alt"></i>
               </button>
-
-            </form>
-
+            </div>
             
+            <div class="btnEdit">
+              <button class="btn btn-warning" (click)="updateGame(data)">
+                <i class="fa-solid fa-pen"></i>
+              </button>
+            </div>
+          
           </div>
 
           <div class="marcoFooter">
@@ -79,12 +52,59 @@
           </div>
 
       </div>
+
+
+      <div>
+
+        <div class="col-md-10 offset-md-1" #div hidden>
+          <div class="card">
+            <div class="card-body">
+              <form>
+  
+                <div class="form-group">
+                    <input class="form-control" type="text" name='name' placeholder="Nombre" [(ngModel)]="data.name" autofocus>
+                </div>
+                
+                <div class="form-group">
+                    <input class="form-control" type="text" name='lastName' placeholder="Apellido" [(ngModel)]="data.lastName">
+                </div>
+                
+                <div class="form-group">
+                    <input class="form-control" type="number" name='telefono' placeholder="Telefono" [(ngModel)]="data.telefono">
+                </div>
+                
+                <div class="form-group">
+                    <input class="form-control" type="email" name='email' placeholder="Email" [(ngModel)]="data.email">
+                </div>
+                
+                <div class="form-group">
+                    <input class="form-control" type="text" name='direccion' placeholder="Direccion" [(ngModel)]="data.direccion">
+                </div>
+  
+                <button class="btn btn-success btn-block" type="submit" (click)="save()"> Guardar
+                  <span></span>
+                  <i class="fa-solid fa-user-plus"></i>
+                </button>
+                <button class="btn btn-danger btn-block" type="submit" (click)="cancelOperation()"> Cancelar
+                  <span></span>
+                  <i class="fa-solid fa-xmark"></i>
+                </button>
+  
+              </form>
+            </div>
+          </div>
+        </div> 
+  
+        <button #button (click)="addNew()" class="btnFinal">Agregar!</button>
+  
+      </div>
+
+
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-</html>
+
+    
+
+
+
+
